adjust examples for normal colab (not pro)

--- a/notebooks/nlp/bert_sequence_classification.ipynb
+++ b/notebooks/nlp/bert_sequence_classification.ipynb
@@ -59,7 +59,7 @@
     "!git clone https://github.com/kiyoungkim1/ReadyToUseAI\n",
     "\n",
     "from ReadyToUseAI.src.nlp import make_sample_dataset, bert_sequence_classification\n",
-    "make_sample_dataset.nsmc(mode='train', text_only=False)"
+    "make_sample_dataset.nsmc(mode='test', text_only=False)  # mode: which datasets? 'train' or 'test'"
    ],
    "execution_count": null,
    "outputs": []
@@ -70,11 +70,11 @@
     "id": "Y2150z24Na2-"
    },
    "source": [
-    "# [Training] \r\n",
-    "* 첨부된 샘플의 경우 약 두시간 소요\r\n",
-    "* min_sentence_length보다 긴 문장만 사용합니다.\r\n",
-    "* MAX_LEN은 모델이 인식하는 token의 길이로, 전체길이가 약 MAX_LEN의 2배보다 긴 문장은 뒷부분이 삭제됩니다 (예를들어 MAX_LEN = 128이면, 대략 길이가 256이상인 문장은 뒷부분이 무시됨).\r\n",
-    "* batch_size는 한번에 몇개의 sample을 계산하는지를 나타내며, 제한된 메모리에서 MAX_LEN을 줄이면 batch_size를 키울 수 있고, MAX_LEN를 키우면 batch_size를 줄여야 합니다. \r\n",
+    "# [Training] \n",
+    "* 첨부된 샘플의 경우 약 40min 소요 (Tesla T4 GPU)\n",
+    "* min_sentence_length보다 긴 문장만 사용합니다.\n",
+    "* MAX_LEN은 모델이 인식하는 token의 길이로, 전체길이가 약 MAX_LEN의 2배보다 긴 문장은 뒷부분이 삭제됩니다 (예를들어 MAX_LEN = 128이면, 대략 길이가 256이상인 문장은 뒷부분이 무시됨).\n",
+    "* batch_size는 한번에 몇개의 sample을 계산하는지를 나타내며, 제한된 메모리에서 MAX_LEN을 줄이면 batch_size를 키울 수 있고, MAX_LEN를 키우면 batch_size를 줄여야 합니다. \n",
     "* epochs는 데이터셋을 몇번 반복해서 학습할지 여부이며, dataset_split은 전체 데이터 중 몇 %를 검증용 데이터셋으로 사용할지 여부입니다."
    ]
   },
@@ -84,9 +84,9 @@
     "id": "JNkyff8jK9Av"
    },
    "source": [
-    "CLS = bert_sequence_classification.Classification(model_name='kykim/bert-kor-base', min_sentence_length=10, MAX_LEN=128, batch_size=32, use_bert_tokenizer=True)\r\n",
-    "CLS.dataset(data_path='dataset.xlsx')\r\n",
-    "CLS.load_model(mode='train')\r\n",
+    "CLS = bert_sequence_classification.Classification(model_name='kykim/bert-kor-base', min_sentence_length=10, MAX_LEN=128, batch_size=32, use_bert_tokenizer=True)\n",
+    "CLS.dataset(data_path='dataset.xlsx')\n",
+    "CLS.load_model(mode='train')\n",
     "CLS.train(epochs=3, dataset_split=0.1)"
    ],
    "execution_count": null,
@@ -109,12 +109,13 @@
     "id": "3jZ5DtJmNLr-"
    },
    "source": [
-    "sentences = ['영화 재밌어요', '영화 재미없어요', '그냥 시간떼우기용', '완전 추천작']\r\n",
-    "saved_model_path='model/saved/3'\r\n",
-    "\r\n",
-    "CLS = bert_sequence_classification.Classification(model_name='kykim/bert-kor-base', min_sentence_length=10, MAX_LEN=128, batch_size=16, use_bert_tokenizer=True)\r\n",
-    "CLS.load_model(mode='inference', saved_model_path=saved_model_path)\r\n",
-    "logit = CLS.inference(sentences=sentences)"
+    "sentences = ['영화 재밌어요', '영화 재미없어요', '그냥 시간떼우기용', '완전 추천작']\n",
+    "saved_model_path='model/saved/3'\n",
+    "\n",
+    "CLS = bert_sequence_classification.Classification(model_name='kykim/bert-kor-base', min_sentence_length=10, MAX_LEN=128, batch_size=64, use_bert_tokenizer=True)\n",
+    "CLS.load_model(mode='inference', saved_model_path=saved_model_path)\n",
+    "logit = CLS.inference(sentences=sentences)\n",
+    "print(logit)  # 네이버 영화평의 경우 0은 부정 카테고리, 1은 긍정 카테고리로 설정되어 있음"
    ],
    "execution_count": null,
    "outputs": []
